--- a/_posts/records/2015-07-24-tips-on-t440p.md
+++ b/_posts/records/2015-07-24-tips-on-t440p.md
@@ -1,8 +1,8 @@
-﻿---
+---
 layout: post
-category : records 
+category : records
 tagline: "Supporting tagline"
-tags : [thinkpad]
+tags : [thinkpad, t440p]
 ---
 {% include JB/setup %}
 
